1.1.1

1.1.0
Updated for Silent Lib 2.2.5 (adds MC 1.10.2 and 1.11.2 compatibility)

1.0.11
Silent Lib 2.2.4 (Forge 2387)

1.0.10
Updated for Silent Lib 2.2.3 and Forge 2373
Fixed: Blights not dropping hearts when killed by pets.

1.0.9
Changed: Heart container texture, courtesy of spawnus_

1.0.8
Forge 2340
Removed: A debug line I accidentally left in.
Fixed: Heart crystal ore not being in any creative tab.

1.0.7
Added: A config to control how many heart crystal shards drop from each ore. Note that fortune can double the base amount.
Changed: Many difficulty configs can now be set to negative values, allowing far greater control over the difficulty system!
Behind the scenes: Updated the config class to the Silent Lib "AdaptiveConfig". Currently this is not being used for anything, but your config file will now track the last build you used.

1.0.6
Added: Config to lose difficulty on death. Set to a negative number if you want to GAIN difficulty on death. Defaults to 0.
Added: Separate config for hearts dropped by passive mobs (defaults to 0.1%, hostile rate is 1%).
Added: Difficulty per kill config. Defaults to 0, set it to something else to increase difficulty for every hostile mob killed.

1.0.5
Added: Config option for damage scaling on mobs (#20)
Added: Config options for position of difficulty meter. Negative numbers will place it some distance from the right/bottom edge of the screen. (#19)
Added: Config options to add extra heart crystal ore veins based on distance from spawn (#16)
Added: Keybindings to show/hide difficulty meter (#15)

1.0.4-44
Fixed: Heart containers not being consumed when used on 1.10.2.

1.0.4-42
Fixed: Heart containers not functioning on 1.10.2.

1.0.4-41
First XCompat build released
Added: Some special blight death messages for comedic effect.

1.0.3
Added: A config to specify the amount of health lost when a player dies (defaults to 0). The old "Lose Health on Death" config is no longer used.

1.0.2